# service/DefaultService.js
@@ -1,38 +1,0 @@
-'use strict';
-
-
-/**
- * The summary of the festival
- *
- * no response value expected for this operation
- **/
-exports.festival_presentationGET = function() {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
-
-/**
- * The main page
- *
- * no response value expected for this operation
- **/
-exports.indexGET = function() {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
-
-/**
- * An event page
- *
- * no response value expected for this operation
- **/
-exports.one_eventGET = function() {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
